renomear componente pensamentos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-cabecalho></app-cabecalho>
 <main>
-    <app-criar-pensamento></app-criar-pensamento>
+    <app-criar-pensamentos></app-criar-pensamentos>
 </main>
 <app-rodape></app-rodape>
